# SDL_Setup

./: .gitignore  CMakeLists.txt  README.md
src/: SimpleWindow.cpp  SimpleWindow.h  main.cpp
src/ecs/: Component.h  ComponentManager.h  Engine.h  Entity.h  EntityManager.h  System.h
